--- a/localisation/french/phi_l_french.yml
+++ b/localisation/french/phi_l_french.yml
@@ -1008,3 +1008,22 @@ tech_collective_self_gob:0 "Gouvernement révolutionnaire"
 tech_collective_self_gob_desc:1 "Trouver des aspects de soi au sein du groupe est naturel et inévitable ; finalement, ces aspects partagés doivent être valorisés plus que les identités individuelles."
 tech_embodied_dynamism_gob:0 "Gouvernement Universalis"
 tech_embodied_dynamism_gob_desc:0 "L'initiative et une certaine mesure d'ambition doivent être promues dans nos unités dirigeantes autonomes, tout en veillant à ce qu'elles ne s'éloignent pas trop des directives de l'intelligence centrale."
+
+tech_shield_point_zero:0 "Boucliers Énergie Zéro-Absolu"
+tech_shield_point_zero_desc:1 "Ce bouclier de technologie de pointe utilise l'énergie Zéro-Absolu. Le bouclier d'énergie peut ricocher sur les surfaces sans consommer l'énergie du bouclier\n§RAttention§! Si vous étudiez cette technologie, vous aurez §Rmoins§! de chance de découvrir les §YArmures Énergie Zéro-Absolu§! qui augmentent l'armure de 33%."
+tech_armor_boost:0 "Armures Énergie Zéro-Absolu"
+tech_armor_boost_desc:1 "Cette technologie de pointe utilise l'énergie Zéro-Absolu à la surface de l'armure. Le bouclier d'énergie peut ricocher sur les surfaces sans endommager l'armure\n§RAttention§! Si vous étudiez cette technologie, vous aurez §Rmoins§! de chance de découvrir les §YBoucliers Énergie Zéro-Absolu§! qui augmentent le bouclier de 33%."
+
+CORVETTE_MID_M1S2:3 "Torpilleur lourd"
+OFFSPRING_CORVETTE_MID_M1S2:0 "$CORVETTE_MID_M1S1$"
+CORVETTE_MID_S4:3 "Conception de bouclier"
+OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
+
+casus_belli_FW_cb_border:0 "Frontière fermée"
+war_goal_FW_wg_open_border: "Ouvrir la frontière"
+war_goal_FW_wg_open_border_desc: "Déclenchez une guerre pour ouvrir les frontières de la civilisation hostile et obtenir 20 ans de droit de passage."
+z_fw_open_border_tooltip:0 "§Y[From.GetName]§! a été vaincu, ils ont baissé les armes et ont accepté d'ouvrir leur frontière pour nous dans les §Y20§! prochaines années.\n§Y[Root.GetName]§! a gagné §G+100§! £influence£\n"
+war_goal_FW_wg_open_border_long: "Longue ouverture de frontière"
+war_goal_FW_wg_open_border_long_desc: "Déclenchez une guerre pour ouvrir les frontières de civilisations hostiles, gagner 50 ans de passages et mettre fin à la compétition."
+z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§! a été complètement vaincu, ils ont dû baisser les armes et ont accepté d'ouvrir leur frontière pour nous dans les §Y50§! prochaines années. Dans le même temps, nous avons également mis fin à l'état de rivalité avec eux, mais évidemment, ils ne sont pas d'accord avec ce résultat et riposteront un jour dans l'avenir.\n§Y[Root.GetName]§! a gagné §G+150§! £influence£\n"
+z_fw_opinion_wg_open_boder_long:0 "Être libre dans notre territoire"
