--- a/localisation/german/phi_l_german.yml
+++ b/localisation/german/phi_l_german.yml
@@ -1008,3 +1008,22 @@ tech_collective_self_gob:0 "Revolutionäre Regierung"
 tech_collective_self_gob_desc:1 "Gruppenbezogene Aspekte des eigenen Selbst zu finden ist natürlich und unausweichlich; schließlich müssen diese geteilten Aspekte höher bewertet werden als individuelle Identitäten."
 tech_embodied_dynamism_gob:0 "Regierung Universalis"
 tech_embodied_dynamism_gob_desc:0 "Initiative und ein gewisses Maß an Ehrgeiz müssen in unseren autonomen Führungseinheiten gefördert werden, während gleichzeitig sichergestellt wird, dass sie sich nicht zu weit von den Richtlinien der zentralen Intelligenz entfernen."
+
+tech_shield_point_zero:0 "Schilde Nullpunkt-Absolutenergie"
+tech_shield_point_zero_desc:1 "Dieser High-Tech-Schild verwendet Nullpunkt-Absolutenergie. Der Energieschild kann von Oberflächen abprallen, ohne die Energie des Schilds zu verbrauchen.\n§RWarnung§! Wenn Sie diese Technologie studieren, haben Sie §Rweniger§! Chancen, §YPanzerungen Nullpunkt-Absolutenergie§! zu entdecken, die die Panzerung um 33% erhöhen."
+tech_armor_boost:0 "Panzerungen Nullpunkt-Absolutenergie"
+tech_armor_boost_desc:1 "Diese High-Tech-Technologie nutzt Nullpunkt-Absolutenergie auf der Oberfläche der Rüstung. Der Energieschild kann von Oberflächen abprallen, ohne die Rüstung zu beschädigen\n§RWarnung§! Wenn Sie diese Technologie studieren, haben Sie §Rweniger§! Chancen, §YSchilde Nullpunkt-Absolutenergie§! zu entdecken, die den Schild um 33% erhöhen."
+
+CORVETTE_MID_M1S2:3 "Schwerer Torpedoboot"
+OFFSPRING_CORVETTE_MID_M1S2:0 "$CORVETTE_MID_M1S1$"
+CORVETTE_MID_S4:3 "Geschütztes Design"
+OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
+
+casus_belli_FW_cb_border:0 "Geschlossene Grenze"
+war_goal_FW_wg_open_border: "Offene Grenze"
+war_goal_FW_wg_open_border_desc: "Beginnen Sie einen Krieg, um die Grenzen einer feindlichen Zivilisation zu öffnen und 20 Jahre Durchgangsrecht zu erhalten."
+z_fw_open_border_tooltip:0 "§Y[From.GetName]§! wurde besiegt, sie haben ihre Arroganz abgelegt und sich bereit erklärt, innerhalb von §Y20§! Jahren ihre Grenzen für uns zu öffnen.\n§Y[Root.GetName]§! hat §G+100§! £Influence£ gewonnen.\n"
+war_goal_FW_wg_open_border_long: "Langfristige offene Grenze"
+war_goal_FW_wg_open_border_long_desc: "Beginnen Sie einen Krieg, um die Grenzen feindlicher Zivilisationen zu öffnen, erhalten Sie 50 Jahre Durchgangsrecht und beenden Sie den Wettbewerb."
+z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§! wurde vollständig besiegt, sie mussten ihre Arroganz ablegen und sich bereit erklären, innerhalb von §Y50§! Jahren ihre Grenzen für uns zu öffnen. Gleichzeitig haben wir auch den Status des Rivalen mit ihnen beendet, aber offensichtlich stimmen sie diesem Ergebnis nicht zu und werden eines Tages in der Zukunft zurückschlagen.\n§Y[Root.GetName]§! hat §G+150§! £Influence£ gewonnen.\n"
+z_fw_opinion_wg_open_boder_long:0 "In unserem Territorium frei sein"
