--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -1016,3 +1016,22 @@ tech_collective_self_gob:0 "Governo rivoluzionario"
 tech_collective_self_gob_desc:1 "Trovare aspetti del sé all'interno del gruppo è naturale e inevitabile; alla fine, questi aspetti condivisi devono essere valutati più delle identità individuali."
 tech_embodied_dynamism_gob:0 "Governo Universalis"
 tech_embodied_dynamism_gob_desc:0 "Iniziativa e una certa misura di ambizione devono essere promosse nelle nostre unità di comando autonome, assicurandoci allo stesso tempo che non si allontanino troppo dalle direttive dell'intelligenza centrale."
+
+tech_shield_point_zero:0 "Scudi Energia Assoluta Punto Zero"
+tech_shield_point_zero_desc:1 "Questo scudo di tecnologia all'avanguardia utilizza l'Energia Assoluta Punto Zero. Lo scudo energetico può rimbalzare su superfici senza consumare l'energia dello scudo\n§RAttenzione§! Se studiate questa tecnologia, avrete §Rmeno§! probabilità di scoprire le §YArmature Energia Assoluta Punto Zero§! che aumentano l'armatura del 33%."
+tech_armor_boost:0 "Armature Energia Assoluta Punto Zero"
+tech_armor_boost_desc:1 "Questa tecnologia all'avanguardia utilizza l'Energia Assoluta Punto Zero sulla superficie dell'armatura. Lo scudo energetico può rimbalzare su superfici senza danneggiare l'armatura\n§RAttenzione§! Se studiate questa tecnologia, avrete §Rmeno§! probabilità di scoprire gli §YScudi Energia Assoluta Punto Zero§! che aumentano lo scudo del 33%."
+
+CORVETTE_MID_M1S2:3 "Torpediniera pesante"
+OFFSPRING_CORVETTE_MID_M1S2:0 "$CORVETTE_MID_M1S1$"
+CORVETTE_MID_S4:3 "Design schermato"
+OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
+
+casus_belli_FW_cb_border:0 "Frontiera chiusa"
+war_goal_FW_wg_open_border: "Aprire la frontiera"
+war_goal_FW_wg_open_border_desc: "Iniziare una guerra per aprire le frontiere di una civiltà ostile e ottenere 20 anni di diritto di passaggio.\n\nIl nemico §Gnon può§! settare sopravvivere alla guerra, §Rnon puoi§! ottenere rivendicazioni!"
+z_fw_open_border_tooltip:0 "§Y[From.GetName]§! è stato sconfitto, hanno abbassato la testa e hanno accettato di aprire la loro frontiera per noi nei prossimi §Y20§! anni.\n§Y[Root.GetName]§! ha guadagnato §G+100§! £influenza£\n"
+war_goal_FW_wg_open_border_long: "Lunga apertura della frontiera"
+war_goal_FW_wg_open_border_long_desc: "Iniziare una guerra per aprire le frontiere di civiltà ostili, ottenere 50 anni di diritto di passaggio e mettere fine alla competizione.\n\nIl nemico §Gnon può§! settare sopravvivere alla guerra, §Rnon puoi§! ottenere rivendicazioni!"
+z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§! è stato completamente sconfitto, hanno dovuto abbassare la testa e hanno accettato di aprire la loro frontiera per noi nei prossimi §Y50§! anni. Allo stesso tempo, abbiamo anche messo fine allo stato di rivalità con loro, ma ovviamente non sono d'accordo con questo risultato e un giorno nel futuro contrattaccheranno.\n§Y[Root.GetName]§! ha guadagnato §G+150§! £influenza£\n"
+z_fw_opinion_wg_open_boder_long:0 "Essere liberi nel nostro territorio"
