--- a/localisation/korean/phi_l_korean.yml
+++ b/localisation/korean/phi_l_korean.yml
@@ -1007,3 +1007,22 @@ tech_collective_self_gob:0 "혁명 정부"
 tech_collective_self_gob_desc:1 "집단 내에서 자기 자신의 측면을 찾는 것은 자연스럽고 피할 수 없다. 결국 공유된 이러한 측면들은 개인의 정체성보다 높이 평가돼야 한다."
 tech_embodied_dynamism_gob:0 "정부 유니버설리스"
 tech_embodied_dynamism_gob_desc:0 "우리의 자율 지휘부위에서 초기화력과 어느 정도의 야심은 장려되어야하지만, 중앙 지성의 지침으로부터 너무 멀어지지 않도록 해야 한다."
+
+tech_shield_point_zero:0 "쉴드 제로포인트 절대 에너지"
+tech_shield_point_zero_desc:1 "이 최첨단 기술 쉴드는 제로포인트 절대 에너지를 사용합니다. 에너지 쉴드는 에너지를 소비하지 않고 표면에서 반사될 수 있습니다\n§R주의§! 이 기술을 연구할 경우, 방어구를 33% 증가시키는 §Y방어구 제로포인트 절대 에너지§!를 발견할 가능성이 §R낮아집니다§!."
+tech_armor_boost:0 "방어구 제로포인트 절대 에너지"
+tech_armor_boost_desc:1 "이 최첨단 기술은 방어구 표면에서 제로포인트 절대 에너지를 사용합니다. 에너지 쉴드는 표면에서 반사되어 방어구를 손상시키지 않습니다.\n§R주의§! 이 기술을 연구할 경우, 쉴드를 33% 증가시키는 §Y쉴드 제로포인트 절대 에너지§!를 발견할 가능성이 §R낮아집니다§!."
+
+CORVETTE_MID_M1S2:3 "중형 어뢰함"
+OFFSPRING_CORVETTE_MID_M1S2:0 "$CORVETTE_MID_M1S1$"
+CORVETTE_MID_S4:3 "보호 디자인"
+OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
+
+casus_belli_FW_cb_border:0 "국경 폐쇄"
+war_goal_FW_wg_open_border: "국경 개방"
+war_goal_FW_wg_open_border_desc: "적대적인 문명의 국경을 열기 위해 전쟁을 시작하고 20년간 통행 권한을 얻으십시오."
+z_fw_open_border_tooltip:0 "§Y[From.GetName]§!는 패배했으며, 그들은 겸손한 태도를 취하고 다음 §Y20§!년 동안 우리에게 국경을 열 것에 동의했습니다.\n§Y[Root.GetName]§!은 §G+100§! £영향력£을 획득했습니다.\n"
+war_goal_FW_wg_open_border_long: "장기간 국경 개방"
+war_goal_FW_wg_open_border_long_desc: "적대적인 문명의 국경을 열고 50년간 통행 권한을 얻으며 경쟁을 종료하기 위해 전쟁을 시작하십시오."
+z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§!는 완전히 패배했으며, 그들은 다음 §Y50§!년 동안 우리에게 국경을 열 것에 동의해야 했습니다. 동시에, 우리는 그들과의 경쟁 상태도 종료했지만, 분명히 그들은 이 결과에 동의하지 않으며 언젠가 미래에 반격할 것입니다.\n§Y[Root.GetName]§!은 §G+150§! £영향력£을 획득했습니다.\n"
+z_fw_opinion_wg_open_boder_long:0 "우리 영토에서 자유롭게하기"
