--- a/localisation/polish/phi_l_polish.yml
+++ b/localisation/polish/phi_l_polish.yml
@@ -1007,3 +1007,22 @@ tech_collective_self_gob:0 "Rząd rewolucyjny"
 tech_collective_self_gob_desc:1 "Znajdowanie aspektów siebie wewnątrz grupy jest naturalne i nieuniknione; ostatecznie te współdzielone aspekty muszą być cenione wyżej niż indywidualne tożsamości."
 tech_embodied_dynamism_gob:0 "Rząd Universalis"
 tech_embodied_dynamism_gob_desc:0 "W naszych autonomicznych jednostkach przywódczych należy promować inicjatywę i pewien stopień ambicji, przy jednoczesnym zapewnieniu, że nie oddalają się zbytnio od dyrektyw głównej inteligencji."
+
+tech_shield_point_zero:0 "Tarcze Energii Zero-Punktowej"
+tech_shield_point_zero_desc:1 "Ta przeciętna technologicznie tarcza wykorzystuje energię Zero-Punktową. Tarcza energetyczna może odbijać się od powierzchni bez zużywania energii tarczy\n§ROstrzeżenie§! Jeśli zbadasz tę technologię, będziesz mieć §Rmniej§! szans na odkrycie §YPancerzy Energii Zero-Punktowej§!, które zwiększają pancerz o 33%."
+tech_armor_boost:0 "Pancerze Energii Zero-Punktowej"
+tech_armor_boost_desc:1 "Ta przeciętna technologicznie technologia wykorzystuje energię Zero-Punktową na powierzchni pancerza. Tarcza energetyczna może odbijać się od powierzchni bez uszkadzania pancerza\n§ROstrzeżenie§! Jeśli zbadasz tę technologię, będziesz mieć §Rmniej§! szans na odkrycie §YTarcz Energii Zero-Punktowej§!, które zwiększają tarczę o 33%."
+
+CORVETTE_MID_M1S2:3 "Ciężki torpedowiec"
+OFFSPRING_CORVETTE_MID_M1S2:0 "$CORVETTE_MID_M1S1$"
+CORVETTE_MID_S4:3 "Projekt osłonowy"
+OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
+
+casus_belli_FW_cb_border:0 "Zamknięta granica"
+war_goal_FW_wg_open_border: "Otwarta granica"
+war_goal_FW_wg_open_border_desc: "Rozpocznij wojnę, aby otworzyć granice wrogiej cywilizacji i uzyskać 20 lat prawa przejazdu."
+z_fw_open_border_tooltip:0 "§Y[From.GetName]§! zostało pokonane, złożyli broń i zgodzili się otworzyć dla nas granice w ciągu §Y20§! lat.\n§Y[Root.GetName]§! zyskało §G+100§! £influence£\n"
+war_goal_FW_wg_open_border_long: "Długa otwarta granica"
+war_goal_FW_wg_open_border_long_desc: "Rozpocznij wojnę, aby otworzyć granice wrogiej cywilizacji, uzyskać 50 lat prawa przejazdu i zakończyć rywalizację."
+z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§! zostało całkowicie pokonane, musieli złożyć broń i zgodzili się otworzyć dla nas granice w ciągu §Y50§! lat. Jednocześnie zakończyliśmy stan rywalizacji z nimi, ale oczywiście nie zgodzili się na ten wynik i kiedyś w przyszłości będą chcieli się zemścić.\n§Y[Root.GetName]§! zyskało §G+150§! £influence£\n"
+z_fw_opinion_wg_open_boder_long:0 "Być swobodnym w naszym terytorium"
