--- a/localisation/japanese/phi_l_japanese.yml
+++ b/localisation/japanese/phi_l_japanese.yml
@@ -1006,3 +1006,22 @@ tech_collective_self_gob:0 "革命政府"
 tech_collective_self_gob_desc:1 "集団の中での自己の側面に気づくのは自然で必然的である。最終的にそうした共有された側面は、個別のアイデンティティよりも高く評価されなければならない。"
 tech_embodied_dynamism_gob:0 "政府ユニバーサリス"
 tech_embodied_dynamism_gob_desc:0 "我々自律リーダーユニットの中でイニシアチブとある程度の野心を促進しながら、同時に中央インテリジェンスの指令からあまり離れないようにしなければならない。"
+
+tech_shield_point_zero:0 "シールド・ゼロポイント・アブソリュート・エネルギー"
+tech_shield_point_zero_desc:1 "この最先端技術のシールドは、ゼロポイント・アブソリュート・エネルギーを使用しています。エネルギーシールドは、消費せずに表面から跳ね返ることができます。\n§R注意§! この技術を研究する場合、アーマーを33%増強する§Yアーマーゼロポイント・アブソリュート・エネルギー§!を発見する可能性が§R低下§!します。"
+tech_armor_boost:0 "アーマーゼロポイント・アブソリュート・エネルギー"
+tech_armor_boost_desc:1 "この最先端技術は、アーマーの表面にゼロポイント・アブソリュート・エネルギーを使用しています。エネルギーシールドは、表面から跳ね返ることができ、アーマーを損傷しないようにします。\n§R注意§! この技術を研究する場合、シールドを33%増強する§Yシールド・ゼロポイント・アブソリュート・エネルギー§!を発見する可能性が§R低下§!します。"
+
+CORVETTE_MID_M1S2:3 "重雷装艇"
+OFFSPRING_CORVETTE_MID_M1S2:0 "$CORVETTE_MID_M1S1$"
+CORVETTE_MID_S4:3 "防御設計"
+OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
+
+casus_belli_FW_cb_border:0 "国境閉鎖"
+war_goal_FW_wg_open_border: "国境開放"
+war_goal_FW_wg_open_border_desc: "敵対的な文明の国境を開くために戦争を開始し、20年間の通行権を得る。"
+z_fw_open_border_tooltip:0 "§Y[From.GetName]§!は敗北し、彼らは謙虚な姿勢を見せ、次の§Y20§!年間で我々に国境を開くことに同意しました。\n§Y[Root.GetName]§!は§G+100§! £影響力£を獲得しました。\n"
+war_goal_FW_wg_open_border_long: "長期間の国境開放"
+war_goal_FW_wg_open_border_long_desc: "敵対的な文明の国境を開き、50年間の通行権を得て、競争を終了するために戦争を開始します。"
+z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§!は完全に撃破され、彼らは次の§Y50§!年間で我々に国境を開くことに同意する必要がありました。同時に、彼らとの敵対関係も終了しましたが、明らかに彼らはこの結果に同意しておらず、将来的に反撃するでしょう。\n§Y[Root.GetName]§!は§G+150§! £影響力£を獲得しました。\n"
+z_fw_opinion_wg_open_boder_long:0 "我々の領土で自由にする"
