--- a/localisation/replace/phi_replace_l_korean.yml
+++ b/localisation/replace/phi_replace_l_korean.yml
@@ -165,3 +165,6 @@ EDICT_DESC:8 "\n§E§HEmpire Edicts§! are divided into edicts and campaigns, an
  civic_tooltip_machine_servitor_effects:12 "Start the game with §Y5§! organic £pop£ Pops with £job_bio_trophy£ §Y$citizenship_organic_trophy$§! citizenship and §Y$living_standard_organic_trophy$§! living standard\nCan construct £building£ §Y$building_organic_sanctuary$§! Buildings that allow Bio-Trophies to produce £unity£ §YUnity§! and £society_research£ §YSociety research§! instead of regular Machine Empire buildings such as the £building£ §Y$building_uplink_node$§!\n\nGrants access to the £building£ §Y$holding_organic_sanctuary$§! Holding"
 
 tr_synchronicity_machine_finish_desc:3 "§HUnlocks Edict:§! $edict_industrial_maintenance$.\n$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!\nAscension Perks Unlocked: §G+1§!\nAutomatic Resettlement Chance: §G+30%§!"
+
+ OUR_CLAIMS_ON_ENEMY:1 "" #fix problem that ssend you can gt claim when not true.
+ ALLY_CLAIMS_ON_ENEMY:1 ""
