Miglioramenti e tolto daily councilir base a 12 e meso in mixed +10% speed councilior Possibilità maggiorata per dark matter. Editto per air strike ora costa anche in base alle stazioni.

--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -1062,3 +1062,25 @@ edict_dark_matter_point_grid: "Dark Matter defense grid"
 edict_dark_matter_point_grid_desc:0 "Use dark matter to create a defense grid for point defense."
 edict_dark_matter_ammunition: "Dark Matter air strike"
 edict_dark_matter_ammunition_desc:0 "Use dark matter for ammunition of air strike"
+
+economic_policy_leader_focus: "Leader Focus"
+economic_policy_leader_focus_desc: "We allocate the necessary resources for our leaders to be the best."
+economic_policy_politics: "Politics Focus"
+economic_policy_politics_desc: "We allocate the necessary resources for our politics have power and resource for all.."
+economic_policy_statecraft: "Statecraft Focus"
+economic_policy_statecraft_desc: "We will bring twice the resources to the council.\n\n §YUnlock§! 1 slot of council"
+drone_economic_policy_leader_focus: "Leader Focus"
+drone_economic_policy_leader_focus_desc: "We allocate the necessary resources for our protocol leader to be the best of 3,167777%."
+drone_economic_policy_politics: "Politics Focus"
+drone_economic_policy_politics_desc: "We allocate the necessary resources for our politics have power and resource for all.."
+drone_economic_policy_statecraft: "Statecraft Focus"
+drone_economic_policy_statecraft_desc: "We will bring twice of calculation to the council."
+mod_planet_jobs_ruler_upkeep_mult:0 "Ruler Jobs Upkeep"
+
+
+
+
+
+
+
+
