--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -1035,3 +1035,44 @@ war_goal_FW_wg_open_border_long: "Lunga apertura della frontiera"
 war_goal_FW_wg_open_border_long_desc: "Iniziare una guerra per aprire le frontiere di civiltà ostili, ottenere 50 anni di diritto di passaggio e mettere fine alla competizione.\n\nIl nemico §Gnon può§! settare sopravvivere alla guerra, §Rnon puoi§! ottenere rivendicazioni!"
 z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§! è stato completamente sconfitto, hanno dovuto abbassare la testa e hanno accettato di aprire la loro frontiera per noi nei prossimi §Y50§! anni. Allo stesso tempo, abbiamo anche messo fine allo stato di rivalità con loro, ma ovviamente non sono d'accordo con questo risultato e un giorno nel futuro contrattaccheranno.\n§Y[Root.GetName]§! ha guadagnato §G+150§! £influenza£\n"
 z_fw_opinion_wg_open_boder_long:0 "Essere liberi nel nostro territorio"
+
+
+trait_talented_2:0 "Talento Eccezionale"
+trait_talented_2_desc:0 "§LGli individui di questa specie sono geneticamente modificati con un'attitudine Eccezionale.§!\n"
+job_organic_brain:0 "Calcolatore Cerebrale"
+job_organic_brain_desc:0 "Può usare il proprio cervello come una calcolatrice. Sono ottimizzati per la ricerca e l'unione della società."
+slavery_brain:0 "Cervello da Schiavo"
+
+tech_defense_platform_hull_2:0 "$tech_defense_platform_hull_1$ MK2"
+
+edict_expansion_planer: "Espansione della Dimensione dell'Impero"
+edict_expansion_planer_desc:0 "Aumenta il limite del nostro impero per nuove colonie."
+
+tech_defense_platform_hull_2_desc:0 "$tech_defense_platform_hull_1_desc$"
+
+job_organic_brain_plural:0 "Calcolatori Cerebrali"
+slavery_brain_tooltip:0 "Usano il loro cervello organico come una calcolatrice. Sono ottimizzati per la ricerca e l'unione della società."
+slavery_brain_tooltip_delayed:0 "Ogni cervello organico produce 2 £society_research£ e 0,25 £unity£."
+OUR_CLAIMS_ON_ENEMYS:1 "Se abbiamo delle pretese che stiamo cercando di conquistare dall'altro nemico e dai loro alleati."
+ALLY_CLAIMS_ON_ENEMYS:1 "Se i nostri alleati hanno delle pretese che stiamo cercando di conquistare dall'altro nemico e dai loro alleati."
+
+edict_dark_matter_explosives: "Esplosivi di Materia Oscura"
+edict_dark_matter_explosives_desc:0 "L'uso della materia oscuraper i missili può essere molto utile se si vuole causare danni."
+edict_dark_matter_point_grid: "Griglia di Difesa di Materia Oscura"
+edict_dark_matter_point_grid_desc:0 "Usa la materia oscura per creare una griglia di difesa per la difesa a punto."
+edict_dark_matter_ammunition: "Attacco Aereo di Materia Oscura"
+edict_dark_matter_ammunition_desc:0 "Usa la materia oscura per la munizione dell'attacco aereo."
+
+economic_policy_leader_focus: "Focus dei Leader"
+economic_policy_leader_focus_desc: "Destiniamo le risorse necessarie affinché i nostri leader possano essere i migliori."
+economic_policy_politics: "Focus sulla Politica"
+economic_policy_politics_desc: "Destiniamo le risorse necessarie affinché la nostra politica abbia potere e risorse per tutti."
+economic_policy_statecraft: "Focus sulla Diplomazia"
+economic_policy_statecraft_desc: "Porteremo al consiglio il doppio delle risorse."
+drone_economic_policy_leader_focus: "Focus dei Leader dei Protocolli"
+drone_economic_policy_leader_focus_desc: "Destiniamo le risorse necessarie affinché il nostro leader di protocollo possa essere il migliore del 3,167777%."
+drone_economic_policy_politics: "Focus sulla Politica"
+drone_economic_policy_politics_desc: "Destiniamo le risorse necessarie affinché la nostra politica abbia potere e risorse per tutti."
+drone_economic_policy_statecraft: "Focus sulla Diplomazia"
+drone_economic_policy_statecraft_desc: "Porteremo al consiglio il doppio dei calcoli."
+mod_planet_jobs_ruler_upkeep_mult:0 "Costi di mantenimento dei Lavori del Governatore"
