--- a/localisation/replace/phi_replace_l_italian.yml
+++ b/localisation/replace/phi_replace_l_italian.yml
@@ -181,3 +181,5 @@ tr_synchronicity_machine_finish_desc:3 "§HSblocca Editto:§! $edict_industrial_
 
  OUR_CLAIMS_ON_ENEMY:1 "" #fix problem that ssend you can gt claim when not true.
  ALLY_CLAIMS_ON_ENEMY:1 ""
+
+origin_tooltip_imperial_vassal_effects:1 "§G- ATTENZIONE: Origine facile per i nuovi giocatori.§!\n- Inizia come vassallo di un §HImpero AI avanzato§!.\n- Ottieni l'opzione di scegliere un tipo di vassallo §HEmpire Specialist§! all'inizio del gioco."
